# godot4-rust-extension

./: README.md  hide_example.gdextension
hideExample/: Cargo.toml
hide_example/: Cargo.toml
hide_example/src/: example.rs  lib.rs
